# app/Models/Category.php
@@ -15,4 +15,8 @@ class Category extends Model
     {
         return $this->hasMany(Post::class);
     }
+    public function products(): HasMany
+    {
+        return $this->hasMany(Product::class);
+    }
 }
