# routes/api.php
@@ -4,7 +4,9 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\AuthApiController;
+use App\Http\Controllers\Api\ProductApiController;
 
+// AUTH
 Route::prefix('auth')->group(function () {
     Route::post('/register', [AuthApiController::class, 'register']);
     Route::post('/login', [AuthApiController::class, 'login']);
@@ -14,3 +16,16 @@ Route::prefix('auth')->group(function () {
         Route::post('/logout', [AuthApiController::class, 'logout']);
     });
 });
+
+// CATEGORY
+
+
+// PRODUCT
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/products', [ProductApiController::class, 'index']);
+    Route::post('/products', [ProductApiController::class, 'store']);
+    Route::get('/products/{id}', [ProductApiController::class, 'show']);
+    Route::put('/products/{id}', [ProductApiController::class, 'update']);
+    Route::delete('/products/{id}', [ProductApiController::class, 'destroy']);
+});
+
